--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Юленька Соколова",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "eslint": "^8.43.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
