--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "eslint": "^8.43.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1"
+    "helmet": "^7.0.0",
+    "mongoose": "^7.3.1",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "eslint": "^8.43.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^1.14.9"
   }
 }
