--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"]}],
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "consistent-return": "off"
   }
 }
